--- a/quartz/components/styles/contentMeta.scss
+++ b/quartz/components/styles/contentMeta.scss
@@ -4,10 +4,9 @@
 
   &[show-comma="true"] {
     > span:not(:last-child) {
-      margin-right: 8px;
 
       &::after {
-        content: ",";
+        content: "  •  ";
       }
     }
   }
