add styling for properties

--- a/quartz/components/styles/properties.scss
+++ b/quartz/components/styles/properties.scss
@@ -1,8 +1,9 @@
-div.properties {
-
+span.properties {
+    &-key {
+        font-weight: bold;
+    }
 }
 
-//if properties-key, do bold
-.properties-key {
+.property-key {
     font-weight: bold;
 }
