--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -2,11 +2,10 @@
 
 .search {
   min-width: fit-content;
-  max-width: 14rem;
+  max-width: fit-content;
   flex-grow: 0.3;
 
   & > #search-icon {
-    background-color: var(--lightgray);
     border-radius: 4px;
     height: 2rem;
     display: flex;
@@ -25,12 +24,11 @@
 
     & svg {
       cursor: pointer;
-      width: 18px;
-      min-width: 18px;
-      margin: 0 0.5rem;
+      width: 16px;
+      min-width: 16px;
 
       .search-path {
-        stroke: var(--darkgray);
+        stroke: var(--light);
         stroke-width: 2px;
         transition: stroke 0.5s ease;
       }
