--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -2,7 +2,7 @@
 
 .search {
   min-width: fit-content;
-  max-width: fit-content;
+  max-width: 14rem;
   flex-grow: 0.3;
 
   & > #search-icon {
@@ -24,8 +24,9 @@
 
     & svg {
       cursor: pointer;
-      width: 16px;
-      min-width: 16px;
+      width: 18px;
+      min-width: 18px;
+      margin: 0 0.5rem;
 
       .search-path {
         stroke: var(--light);
