--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -11,7 +11,7 @@ $box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
 @mixin mobile {
 	@media only screen and (max-width: 767px) {
 		@content;
-		margin-right: 8px;
+		margin: 0 1rem;
 	}
 }
 
@@ -20,7 +20,6 @@ nav.navbar::before,
 nav.navbar::after,
 nav.navbar, *::before, *::after {
 	padding: 0;
-	margin: 0;
 	box-sizing: border-box;
 	list-style: none;
 	list-style-type: none;
