--- a/quartz/components/styles/footer.scss
+++ b/quartz/components/styles/footer.scss
@@ -1,15 +1,72 @@
 footer {
   text-align: left;
+  margin-top: 2rem;
   margin-bottom: 4rem;
-  opacity: 0.7;
+  padding: 1rem;
+	background: var(--dark);
+  border-radius: .75rem;
+
+  & .footer-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  @media (max-width: 768px) {
+    & .footer-container {
+      flex-direction: column;
+      margin-top: 1rem;
+    }
+  }
+
+  & .footer-columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-grow: 1;
+    margin: 0 2rem 0 1rem;
+  }
+
+  @media (max-width: 768px) {
+    & .footer-columns {
+      flex-direction: column;
+      margin: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    & .footer-column {
+      margin-bottom: 1rem;
+    }
+  }
+
+  & h3 {
+    margin: 0;
+    color: var(--light);
+  
+  }
 
   & ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
-    margin-top: -1rem;
+  }
+
+  & img.lyt-logo {
+    margin: 0px;
+    //160px works for non-blurry
+    width: 142px;
+  }
+
+  & p {
+    color: var(--light);
+  }
+
+  & .footer-credits {
+    margin-top: 2rem;
   }
 }
