--- a/quartz/components/styles/footer.scss
+++ b/quartz/components/styles/footer.scss
@@ -2,22 +2,14 @@ footer {
   text-align: left;
   margin-top: 2rem;
   margin-bottom: 4rem;
-  padding: 1rem;
 	background: var(--dark);
   border-radius: .75rem;
 
   & .footer-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
-    margin-top: 1rem;
-  }
-
-  @media (max-width: 768px) {
-    & .footer-container {
-      flex-direction: column;
-      margin-top: 1rem;
-    }
+    padding: 2rem;
   }
 
   & .footer-columns {
@@ -25,7 +17,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     flex-grow: 1;
-    margin: 0 2rem 0 1rem;
+    margin: 0 2rem 0 0;
   }
 
   @media (max-width: 768px) {
@@ -67,6 +59,5 @@ footer {
   }
 
   & .footer-credits {
-    margin-top: 2rem;
   }
 }
