level out left/right tops with center top

--- a/quartz/styles/variables.scss
+++ b/quartz/styles/variables.scss
@@ -2,8 +2,9 @@ $pageWidth: 670px;
 $mobileBreakpoint: 600px;
 $tabletBreakpoint: 1000px;
 $sidePanelWidth: 380px;
-$topSpacing: 10rem;
+$topSpacing: 9.125rem;
 $fullPageWidth: $pageWidth + 2 * $sidePanelWidth;
 $boldWeight: 700;
 $semiBoldWeight: 600;
+$mediumWeight: 500;
 $normalWeight: 400;
