--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -716,6 +716,7 @@ a {
       margin-top: 1.25rem;
       box-sizing: border-box;
       padding: 0 4rem;
+      bottom: 0;
       position: fixed;
       @media all and (max-width: $fullPageWidth) {
         position: initial;
