--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -3,10 +3,11 @@
 @use "./callouts.scss";
 
 @font-face {
+  // quartz/static/fonts/CanelaDeck/
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Light-Web.woff2") format("woff2"),
-    url("CanelaDeck-Light-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Light-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Light-Web.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
@@ -19,8 +20,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Black-Web.woff2") format("woff2"),
-    url("CanelaDeck-Black-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Black-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Black-Web.woff") format("woff");
   font-weight: 900;
   font-style: normal;
 }
@@ -33,8 +34,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Thin-Web.woff2") format("woff2"),
-    url("CanelaDeck-Thin-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Thin-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Thin-Web.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
@@ -47,8 +48,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Regular-Web.woff2") format("woff2"),
-    url("CanelaDeck-Regular-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Regular-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Regular-Web.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -61,8 +62,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-BlackItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-BlackItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-BlackItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-BlackItalic-Web.woff") format("woff");
   font-weight: 900;
   font-style: italic;
 }
@@ -75,8 +76,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-BoldItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-BoldItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-BoldItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-BoldItalic-Web.woff") format("woff");
   font-weight: 700;
   font-style: italic;
 }
@@ -89,8 +90,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Bold-Web.woff2") format("woff2"),
-    url("CanelaDeck-Bold-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Bold-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Bold-Web.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -103,8 +104,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-MediumItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-MediumItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-MediumItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-MediumItalic-Web.woff") format("woff");
   font-weight: 500;
   font-style: italic;
 }
@@ -117,8 +118,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-Medium-Web.woff2") format("woff2"),
-    url("CanelaDeck-Medium-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-Medium-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-Medium-Web.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -131,8 +132,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-LightItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-LightItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-LightItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-LightItalic-Web.woff") format("woff");
   font-weight: 300;
   font-style: italic;
 }
@@ -145,8 +146,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-ThinItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-ThinItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-ThinItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-ThinItalic-Web.woff") format("woff");
   font-weight: 100;
   font-style: italic;
 }
@@ -159,8 +160,8 @@
 @font-face {
   font-family: "Canela Deck Web";
   src:
-    url("CanelaDeck-RegularItalic-Web.woff2") format("woff2"),
-    url("CanelaDeck-RegularItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaDeck/CanelaDeck-RegularItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaDeck/CanelaDeck-RegularItalic-Web.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
@@ -173,8 +174,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-BlackItalic-Web.woff2") format("woff2"),
-    url("CanelaText-BlackItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-BlackItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-BlackItalic-Web.woff") format("woff");
   font-weight: 900;
   font-style: italic;
 }
@@ -187,8 +188,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Bold-Web.woff2") format("woff2"),
-    url("CanelaText-Bold-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Bold-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Bold-Web.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -201,8 +202,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Regular-Web.woff2") format("woff2"),
-    url("CanelaText-Regular-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Regular-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Regular-Web.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -215,8 +216,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-RegularNo2-Web.woff2") format("woff2"),
-    url("CanelaText-RegularNo2-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-RegularNo2-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-RegularNo2-Web.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -229,8 +230,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Light-Web.woff2") format("woff2"),
-    url("CanelaText-Light-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Light-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Light-Web.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
@@ -243,8 +244,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-RegularItalic-Web.woff2") format("woff2"),
-    url("CanelaText-RegularItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-RegularItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-RegularItalic-Web.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
@@ -257,8 +258,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Medium-Web.woff2") format("woff2"),
-    url("CanelaText-Medium-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Medium-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Medium-Web.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
@@ -271,8 +272,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Thin-Web.woff2") format("woff2"),
-    url("CanelaText-Thin-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Thin-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Thin-Web.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
@@ -285,8 +286,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-MediumItalic-Web.woff2") format("woff2"),
-    url("CanelaText-MediumItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-MediumItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-MediumItalic-Web.woff") format("woff");
   font-weight: 600;
   font-style: italic;
 }
@@ -299,8 +300,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-Black-Web.woff2") format("woff2"),
-    url("CanelaText-Black-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-Black-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-Black-Web.woff") format("woff");
   font-weight: 900;
   font-style: normal;
 }
@@ -313,8 +314,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-BoldItalic-Web.woff2") format("woff2"),
-    url("CanelaText-BoldItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-BoldItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-BoldItalic-Web.woff") format("woff");
   font-weight: 700;
   font-style: italic;
 }
@@ -327,8 +328,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-ThinItalic-Web.woff2") format("woff2"),
-    url("CanelaText-ThinItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-ThinItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-ThinItalic-Web.woff") format("woff");
   font-weight: 100;
   font-style: italic;
 }
@@ -341,8 +342,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-LightItalic-Web.woff2") format("woff2"),
-    url("CanelaText-LightItalic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-LightItalic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-LightItalic-Web.woff") format("woff");
   font-weight: 300;
   font-style: italic;
 }
@@ -356,8 +357,8 @@
 @font-face {
   font-family: "Canela Text Web";
   src:
-    url("CanelaText-RegularNo2Italic-Web.woff2") format("woff2"),
-    url("CanelaText-RegularNo2Italic-Web.woff") format("woff");
+    url("/static/fonts/CanelaText/CanelaText-RegularNo2Italic-Web.woff2") format("woff2"),
+    url("/static/fonts/CanelaText/CanelaText-RegularNo2Italic-Web.woff") format("woff");
   font-weight: 500;
   font-style: italic;
 }
@@ -370,42 +371,42 @@
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-Italic.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-Light.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-LightItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-Medium.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-MediumItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Mono";
-  src: url("DMMono-Regular.ttf") format("truetype");
+  src: url("/static/fonts/DMMono/DMMono-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -413,126 +414,126 @@
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Black.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-BlackItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-BlackItalic.ttf") format("truetype");
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Bold.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-BoldItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-BoldItalic.ttf") format("truetype");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-ExtraBold.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-ExtraBoldItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-ExtraBoldItalic.ttf") format("truetype");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-ExtraLight.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-ExtraLightItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-ExtraLightItalic.ttf") format("truetype");
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Italic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Light.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-LightItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Medium.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-MediumItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Regular.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-SemiBold.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-SemiBoldItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-SemiBoldItalic.ttf") format("truetype");
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-Thin.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM Sans";
-  src: url("DMSans-ThinItalic.ttf") format("truetype");
+  src: url("/static/fonts/DMSans/DMSans-ThinItalic.ttf") format("truetype");
   font-weight: 100;
   font-style: italic;
 }
@@ -574,7 +575,7 @@ section {
   h4,
   h5,
   h6 {
-    font-family: "Canela Deck", sans;
+    font-family: "Canela Deck Web", sans;
   }
 }
 
