test out bottom up layout

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -717,7 +717,7 @@ a {
       margin-top: 1.25rem;
       box-sizing: border-box;
       padding: 0 4rem;
-      bottom: 0;
+      bottom: 2rem;
       position: fixed;
       @media all and (max-width: $fullPageWidth) {
         position: initial;
