--- a/quartz/components/styles/footer.scss
+++ b/quartz/components/styles/footer.scss
@@ -1,15 +1,18 @@
+@use "../../styles/variables.scss" as *;
+
 footer {
+  width: 100vw !important;
   text-align: left;
-  margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-top: auto;
 	background: var(--dark);
-  border-radius: .75rem;
 
   & .footer-container {
+    max-width: $pageWidth;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
+    margin: 0 auto;
   }
 
   & .footer-columns {
@@ -17,6 +20,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     flex-grow: 1;
+    gap: 4rem;
     margin: 0 2rem 0 0;
   }
 
