add x overflow again

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -543,7 +543,7 @@
 html {
   scroll-behavior: smooth;
   text-size-adjust: none;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   width: 100vw;
 }
 
