add margin for footer

--- a/quartz/components/styles/footer.scss
+++ b/quartz/components/styles/footer.scss
@@ -3,7 +3,7 @@
 footer {
   width: 100vw !important;
   text-align: left;
-  margin-top: auto;
+  margin-top: 2rem;
 	background: var(--dark);
 
   & .footer-container {
