--- a/quartz/components/styles/callToAction.scss
+++ b/quartz/components/styles/callToAction.scss
@@ -9,14 +9,16 @@
   margin: 2rem 0;
 }
 .cta-title {
-  margin: 0 0 1rem 0;
-  font-size: 3rem;
+  margin: 0;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .cta-subtitle {
   font-size: 1.5rem;
   font-family: 'Canela Text Web', sans;
   font-weight: 200;
+  text-align: center;
 }
 
 .cta-form {
