--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -17,7 +17,11 @@
   transition: max-height 0.3s ease;
   box-sizing: border-box;
 
-  & > *:nth-child(2) {
+  & > ul {
+    padding-left: 1.25rem;
+  }
+
+  & > *:not(:first-child) {
     margin-top: 0;
     font-size: 16px;
     line-height: 1.6rem;
