two column sidebar content fits page on mobile

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -736,7 +736,7 @@ a {
         position: initial;
         flex-direction: row;
         padding: 0;
-        width: initial;
+        width: 100%;
         margin-top: 2rem;
       }
     }
