--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -7,6 +7,20 @@
   width: 50%;
 }
 
+.center .callout { 
+  & > .callout-content {
+    font-size: 16px;
+    > :first-child {
+      margin-top: 0;
+    }
+    ul, p {
+      line-height: 1.6rem;
+    }
+    ul {
+      padding-left: 1.3125rem;
+    }
+  }
+}
 
 .callout {
   border: 1px solid var(--border);
@@ -16,16 +30,6 @@
   overflow-y: hidden;
   transition: max-height 0.3s ease;
   box-sizing: border-box;
-
-  & > ul, & > li {
-    padding-left: 1.3125rem;
-  }
-
-  & > .callout-content > :first-child {
-    margin-top: 0;
-    font-size: 16px;
-    line-height: 1.6rem;
-  }
 
   --callout-icon-note: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="2" x2="22" y2="6"></line><path d="M7.5 20.5 19 9l-4-4L3.5 16.5 2 22z"></path></svg>');
   --callout-icon-abstract: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><path d="M12 11h4"></path><path d="M12 16h4"></path><path d="M8 11h.01"></path><path d="M8 16h.01"></path></svg>');
